--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "firebase": "^9.8.4",
-    "node-sass": "^7.0.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "sass": "^1.53.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
