--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^7.21.0",
-    "framer-motion": "^6.3.16",
+    "firebase": "^9.9.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
